--- a/package.json
+++ b/package.json
@@ -16,9 +16,6 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
     "@babel/polyfill": "^7.8.7",
     "@babel/preset-react": "^7.8.3",
-    "@fortawesome/fontawesome-svg-core": "^1.2.28",
-    "@fortawesome/free-solid-svg-icons": "^5.13.0",
-    "@fortawesome/react-fontawesome": "^0.1.9",
     "core-js": "^3.6.5",
     "css-loader": "0.28.4",
     "enzyme-to-json": "^3.4.4",
@@ -35,9 +32,11 @@
     "react-addons-shallow-compare": "15.6.0",
     "react-dates": "^21.8.0",
     "react-dom": "^16.12.0",
+    "react-icons": "^3.10.0",
     "react-modal": "2.2.2",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
+    "read-more-react": "^1.0.10",
     "redux": "^4.0.5",
     "redux-mock-store": "^1.5.4",
     "redux-thunk": "^2.3.0",
